K8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: learning-prometheus-service
  namespace: techfresh
  labels:
    app: learning-prometheus
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
      name: metrics
    - port: 80
      protocol: TCP
      targetPort: 4000
      name: server
  selector:
    app: learning-prometheus
  type: ClusterIP
