K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learning-prometheus
spec:
  rules:
    - host: learning-prometheus.line.dev
      http:
        paths:
          - backend:
              service:
                name: learning-prometheus-service
                port:
                  number: 80
            path: /
            pathType: Prefix
